fix: readability issues

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,6 @@
 .header {
-  background: url(../images/header_background.jpg) no-repeat center / cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(../images/header_background.jpg);
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -16,8 +17,6 @@
   margin: 160px auto 0 auto;
   align-self: center;
   z-index: 2;
-  backdrop-filter: brightness(60%);
-  backdrop-filter: blur(2px);
   border-radius: 50px;
 }
 
@@ -30,8 +29,6 @@
   align-self: center;
   z-index: 2;
   top: 200px;
-  backdrop-filter: brightness(60%);
-  backdrop-filter: blur(2px);
   border-radius: 50px;
 }
 
@@ -57,11 +54,11 @@
 @media screen and (min-width: 540px) and (max-width: 767px) {
   .header__title {
     font-size: 4rem;
-    line-height: 5rem;
+    line-height: 4rem;
     margin-bottom: 0;
   }
   .header__description {
-    font-size: 1rem;
+    font-size: 2rem;
     line-height: 2rem;
     margin-top: 50px;
   }
@@ -69,11 +66,11 @@
 
 @media screen and (max-width: 539px) {
   .header__title {
-    font-size: 2rem;
-    line-height: 4rem;
+    font-size: 3rem;
+    line-height: 3rem;
   }
   .header__description {
-    font-size: 1rem;
+    font-size: 1.3rem;
     line-height: 2rem;
   }
 }
