--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,7 +13,7 @@
   right: 0;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  background-color: rgba(13, 10, 11, 0.60);
+  background-color: rgba(13, 10, 11, 0.70);
 }
 
 .modal__links {
